--- a/RL_ActorCritic_DDPG_Movie_Recommendation.ipynb
+++ b/RL_ActorCritic_DDPG_Movie_Recommendation.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "RL_ActorCritic_DDPG_Movie_Recommendation.ipynb",
+      "name": "Copy of RL_ActorCritic_DDPG_Movie_Recommendation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
@@ -619,7 +619,9 @@
         "from torchtools.optim import Ranger\n",
         "import tqdm\n",
         "import random\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "#To use Adam Optimiser - uncomment below line\n",
+        "# from torch.optim import Adam\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1204,6 +1206,40 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3QbeUhHb-iO4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Getting Cosine similarity of recommended items for a particular userid that has been evaluated\n",
+        "from sklearn.metrics.pairwise import cosine_similarity as cs\n",
+        "import seaborn as sns\n",
+        "\n",
+        "def get_cosine_sim(userid):\n",
+        "  test_pred = test_pred_dict[userid]\n",
+        "  for i,item in enumerate(users_dict[userid][\"item\"]):\n",
+        "    if item in test_pred:\n",
+        "      print(item,\":\",users_dict[userid][\"rating\"][i])\n",
+        "\n",
+        "  test_embed = []\n",
+        "  for item in test_pred:\n",
+        "    test_embed.append(np.array(movie_embeddings_dict[item]))\n",
+        "\n",
+        "  test_embed_array = np.array(test_embed)\n",
+        "\n",
+        "  return test_embed_array\n",
+        "\n",
+        "test_embed_array = get_cosine_sim(userid_b[0])\n",
+        "ax = sns.heatmap(cs(test_embed_array), linewidth=0.5)\n",
+        "plt.show()\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
