Updated with cosine similarity heatmap

--- a/RL_ActorCritic_DDPG_Movie_Recommendation.ipynb
+++ b/RL_ActorCritic_DDPG_Movie_Recommendation.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of RL_ActorCritic_DDPG_Movie_Recommendation.ipynb",
+      "name": "RL_ActorCritic_DDPG_Movie_Recommendation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
@@ -604,11 +604,7 @@
       "metadata": {
         "id": "1nZWN38whlMJ",
         "colab_type": "code",
-        "outputId": "bd1030aa-178d-4054-c20a-03362df6efc4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
         "#Dependencies\n",
@@ -620,19 +616,12 @@
         "import tqdm\n",
         "import random\n",
         "import matplotlib.pyplot as plt\n",
-        "#To use Adam Optimiser - uncomment below line\n",
-        "# from torch.optim import Adam\n"
+        "#uncomment to use adam\n",
+        "# from torch.optim import Adam\n",
+        "\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "To use this log_lamb_rs, please run 'pip install tensorboardx'. Also you must have Tensorboard running to see results\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1210,7 +1199,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3QbeUhHb-iO4",
+        "id": "_stX77i9A1EV",
         "colab_type": "code",
         "colab": {}
       },
@@ -1235,8 +1224,7 @@
         "\n",
         "test_embed_array = get_cosine_sim(userid_b[0])\n",
         "ax = sns.heatmap(cs(test_embed_array), linewidth=0.5)\n",
-        "plt.show()\n",
-        "\n"
+        "plt.show()\n"
       ],
       "execution_count": 0,
       "outputs": []
