--- a/RL_ActorCritic_DDPG_Movie_Recommendation.ipynb
+++ b/RL_ActorCritic_DDPG_Movie_Recommendation.ipynb
@@ -40,11 +40,7 @@
       "metadata": {
         "id": "kk41_9F5Dwoi",
         "colab_type": "code",
-        "outputId": "985fd801-0e5f-4fa3-ab76-1840d035669c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
+        "colab": {}
       },
       "source": [
         "#Mounting the drive\n",
@@ -52,19 +48,7 @@
         "drive.mount('/content/gdrive')"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
